@@ -1,10 +1,15 @@
 Package: Pade
 Type: Package
 Title: Padé Approximant Coefficients
-Version: 1.0.1
-Date: 2020-06-02
-Authors@R: c(person(given="Avraham", family="Adler", role=c("aut", "cph", "cre"), email="Avraham.Adler@gmail.com", comment = c(ORCID = "0000-0002-3039-0703")))
-Description: Given a vector of Taylor series coefficients of sufficient length as input, the function returns the numerator and denominator coefficients for the Padé approximant of appropriate order (Baker, 1975) <ISBN:9780120748556>.
+Version: 1.0.2
+Date: 2020-11-08
+Authors@R: c(person(given="Avraham", family="Adler",
+    role=c("aut", "cph", "cre"), email="Avraham.Adler@gmail.com",
+    comment = c(ORCID = "0000-0002-3039-0703")))
+Description: Given a vector of Taylor series coefficients of sufficient length
+    as input, the function returns the numerator and denominator coefficients
+    for the Padé approximant of appropriate order (Baker, 1975)
+    <ISBN:9780120748556>.
 License: GPL (>= 2) | BSD_2_clause + file LICENSE
 Imports: utils
 Suggests: testthat, covr
@@ -12,3 +17,4 @@ URL: https://github.com/aadler/Pade
 BugReports: https://github.com/aadler/Pade/issues
 Encoding: UTF-8
 NeedsCompilation: no
+Config/testthat/edition: 3
