@@ -7,11 +7,11 @@ citEntry(entry        = "Manual",
                                             comment = c(ORCID = "0000-0002-3039-0703")))),
          year         = "2015",
          url          = "https://CRAN.R-project.org/package=Pade",
-         note         = "R package version 1.0.1",
+         note         = "R package version 1.0.2",
 
          textVersion  =
            paste("Avraham Adler (2015).",
                  "Pade: Padé Approximant Coefficients",
-                 "R package version 1.0.1.",
+                 "R package version 1.0.2.",
                  "https://CRAN.R-project.org/package=Pade")
 )
